// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSSlider Disabled 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="disabled-id"
    >
      <span
        className="slds-slider-label"
      >
        <span
          className="slds-slider-label__label"
        >
          Slider Label
        </span>
        <span
          className="slds-slider-label__range"
        >
          0
           - 
          100
        </span>
        <span
          className="slds-assistive-text"
        >
           
          Disabled
        </span>
      </span>
    </label>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-slider"
      >
        <input
          className="slds-slider__range"
          disabled={true}
          id="disabled-id"
          max={100}
          min={0}
          onChange={[Function]}
          onInput={[Function]}
          step={1}
          type="range"
        />
        <span
          aria-hidden="true"
          className="slds-slider__value"
        >
          0
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSlider Docs site Sizes 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_pull-padded slds-grid_vertical-align-center"
  >
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element"
      >
        <label
          className="slds-form-element__label"
          htmlFor="x-small-id"
        >
          <span
            className="slds-slider-label"
          >
            <span
              className="slds-slider-label__label"
            >
              Slider Label
            </span>
            <span
              className="slds-slider-label__range"
            >
              0
               - 
              100
            </span>
          </span>
        </label>
        <div
          className="slds-form-element__control"
        >
          <div
            className="slds-slider slds-size_x-small"
          >
            <input
              className="slds-slider__range"
              id="x-small-id"
              max={100}
              min={0}
              onChange={[Function]}
              onInput={[Function]}
              step={1}
              type="range"
            />
            <span
              aria-hidden="true"
              className="slds-slider__value"
            >
              0
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element"
      >
        <label
          className="slds-form-element__label"
          htmlFor="small-id"
        >
          <span
            className="slds-slider-label"
          >
            <span
              className="slds-slider-label__label"
            >
              Slider Label
            </span>
            <span
              className="slds-slider-label__range"
            >
              0
               - 
              100
            </span>
          </span>
        </label>
        <div
          className="slds-form-element__control"
        >
          <div
            className="slds-slider slds-size_small"
          >
            <input
              className="slds-slider__range"
              id="small-id"
              max={100}
              min={0}
              onChange={[Function]}
              onInput={[Function]}
              step={1}
              type="range"
            />
            <span
              aria-hidden="true"
              className="slds-slider__value"
            >
              0
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element"
      >
        <label
          className="slds-form-element__label"
          htmlFor="medium-id"
        >
          <span
            className="slds-slider-label"
          >
            <span
              className="slds-slider-label__label"
            >
              Slider Label
            </span>
            <span
              className="slds-slider-label__range"
            >
              0
               - 
              100
            </span>
          </span>
        </label>
        <div
          className="slds-form-element__control"
        >
          <div
            className="slds-slider slds-size_medium"
          >
            <input
              className="slds-slider__range"
              id="medium-id"
              max={100}
              min={0}
              onChange={[Function]}
              onInput={[Function]}
              step={1}
              type="range"
            />
            <span
              aria-hidden="true"
              className="slds-slider__value"
            >
              0
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="slds-col_padded"
    >
      <div
        className="slds-form-element"
      >
        <label
          className="slds-form-element__label"
          htmlFor="large-id"
        >
          <span
            className="slds-slider-label"
          >
            <span
              className="slds-slider-label__label"
            >
              Slider Label
            </span>
            <span
              className="slds-slider-label__range"
            >
              0
               - 
              100
            </span>
          </span>
        </label>
        <div
          className="slds-form-element__control"
        >
          <div
            className="slds-slider slds-size_large"
          >
            <input
              className="slds-slider__range"
              id="large-id"
              max={100}
              min={0}
              onChange={[Function]}
              onInput={[Function]}
              step={1}
              type="range"
            />
            <span
              aria-hidden="true"
              className="slds-slider__value"
            >
              0
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSlider Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element slds-has-error"
  >
    <label
      className="slds-form-element__label"
      htmlFor="error-id"
    >
      <span
        className="slds-slider-label"
      >
        <span
          className="slds-slider-label__label"
        >
          Slider Label
        </span>
        <span
          className="slds-slider-label__range"
        >
          0
           - 
          100
        </span>
      </span>
    </label>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-slider"
      >
        <input
          aria-describedby="slider-error-message"
          className="slds-slider__range"
          id="error-id"
          max={100}
          min={0}
          onChange={[Function]}
          onInput={[Function]}
          step={1}
          type="range"
        />
        <span
          aria-hidden="true"
          className="slds-slider__value"
        >
          0
        </span>
      </div>
      <div
        className="slds-form-element__help"
        id="slider-error-message"
      >
        There is a problem with this field
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSlider Size: Large 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="large-id"
    >
      <span
        className="slds-slider-label"
      >
        <span
          className="slds-slider-label__label"
        >
          Slider Label
        </span>
        <span
          className="slds-slider-label__range"
        >
          0
           - 
          100
        </span>
      </span>
    </label>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-slider slds-size_large"
      >
        <input
          className="slds-slider__range"
          id="large-id"
          max={100}
          min={0}
          onChange={[Function]}
          onInput={[Function]}
          step={1}
          type="range"
        />
        <span
          aria-hidden="true"
          className="slds-slider__value"
        >
          0
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSlider Size: Medium 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="medium-id"
    >
      <span
        className="slds-slider-label"
      >
        <span
          className="slds-slider-label__label"
        >
          Slider Label
        </span>
        <span
          className="slds-slider-label__range"
        >
          0
           - 
          100
        </span>
      </span>
    </label>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-slider slds-size_medium"
      >
        <input
          className="slds-slider__range"
          id="medium-id"
          max={100}
          min={0}
          onChange={[Function]}
          onInput={[Function]}
          step={1}
          type="range"
        />
        <span
          aria-hidden="true"
          className="slds-slider__value"
        >
          0
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSlider Size: Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="small-id"
    >
      <span
        className="slds-slider-label"
      >
        <span
          className="slds-slider-label__label"
        >
          Slider Label
        </span>
        <span
          className="slds-slider-label__range"
        >
          0
           - 
          100
        </span>
      </span>
    </label>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-slider slds-size_small"
      >
        <input
          className="slds-slider__range"
          id="small-id"
          max={100}
          min={0}
          onChange={[Function]}
          onInput={[Function]}
          step={1}
          type="range"
        />
        <span
          aria-hidden="true"
          className="slds-slider__value"
        >
          0
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSlider Size: X-Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="x-small-id"
    >
      <span
        className="slds-slider-label"
      >
        <span
          className="slds-slider-label__label"
        >
          Slider Label
        </span>
        <span
          className="slds-slider-label__range"
        >
          0
           - 
          100
        </span>
      </span>
    </label>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-slider slds-size_x-small"
      >
        <input
          className="slds-slider__range"
          id="x-small-id"
          max={100}
          min={0}
          onChange={[Function]}
          onInput={[Function]}
          step={1}
          type="range"
        />
        <span
          aria-hidden="true"
          className="slds-slider__value"
        >
          0
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSlider Slider 1`] = `
<div
  className="slds-p-around_medium"
>
  <section>
    <ol>
      <li
        className="slds-p-bottom_large"
      >
        <h1
          className="slds-text-title_caps slds-p-vertical_medium"
        >
          1. Base Input with label
        </h1>
        <div
          className="slds-form-element"
        >
          <label
            className="slds-form-element__label"
            htmlFor="base-id"
          >
            <span
              className="slds-slider-label"
            >
              <span
                className="slds-slider-label__label"
              >
                My Label
              </span>
              <span
                className="slds-slider-label__range"
              >
                0
                 - 
                100
              </span>
            </span>
          </label>
          <div
            className="slds-form-element__control"
          >
            <div
              className="slds-slider"
            >
              <input
                className="slds-slider__range"
                id="base-id"
                max={100}
                min={0}
                onChange={[Function]}
                onInput={[Function]}
                step={1}
                type="range"
                value={0}
              />
              <span
                aria-hidden="true"
                className="slds-slider__value"
              >
                0
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        className="slds-p-bottom_large"
      >
        <h1
          className="slds-text-title_caps slds-p-vertical_medium"
        >
          2. Base Input with no label (assistive text)
        </h1>
        <div
          className="slds-form-element"
        >
          <label
            className="slds-form-element__label slds-assistive-text"
            htmlFor="assistiveText-id"
          >
            <span
              className="slds-slider-label"
            >
              <span
                className="slds-slider-label__label"
              >
                My Label
              </span>
              <span
                className="slds-slider-label__range"
              >
                0
                 - 
                100
              </span>
            </span>
          </label>
          <div
            className="slds-form-element__control"
          >
            <div
              className="slds-slider"
            >
              <input
                className="slds-slider__range"
                id="assistiveText-id"
                max={100}
                min={0}
                onChange={[Function]}
                onInput={[Function]}
                step={1}
                type="range"
                value={0}
              />
              <span
                aria-hidden="true"
                className="slds-slider__value"
              >
                0
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        className="slds-p-bottom_large"
      >
        <h1
          className="slds-text-title_caps slds-p-vertical_medium"
        >
          3. Base Input with min and max.
        </h1>
        <div
          className="slds-form-element"
        >
          <label
            className="slds-form-element__label"
            htmlFor="min-max-id"
          >
            <span
              className="slds-slider-label"
            >
              <span
                className="slds-slider-label__label"
              >
                My Label
              </span>
              <span
                className="slds-slider-label__range"
              >
                0
                 - 
                400
              </span>
            </span>
          </label>
          <div
            className="slds-form-element__control"
          >
            <div
              className="slds-slider"
            >
              <input
                className="slds-slider__range"
                id="min-max-id"
                max={400}
                min={0}
                onChange={[Function]}
                onInput={[Function]}
                step={1}
                type="range"
                value={200}
              />
              <span
                aria-hidden="true"
                className="slds-slider__value"
              >
                200
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        className="slds-p-bottom_large"
      >
        <h1
          className="slds-text-title_caps slds-p-vertical_medium"
        >
          4. Base Input with min, max and step.
        </h1>
        <div
          className="slds-form-element"
        >
          <label
            className="slds-form-element__label"
            htmlFor="min-max-step-id"
          >
            <span
              className="slds-slider-label"
            >
              <span
                className="slds-slider-label__label"
              >
                My Label
              </span>
              <span
                className="slds-slider-label__range"
              >
                0
                 - 
                400
              </span>
            </span>
          </label>
          <div
            className="slds-form-element__control"
          >
            <div
              className="slds-slider"
            >
              <input
                className="slds-slider__range"
                id="min-max-step-id"
                max={400}
                min={0}
                onChange={[Function]}
                onInput={[Function]}
                step={100}
                type="range"
                value={200}
              />
              <span
                aria-hidden="true"
                className="slds-slider__value"
              >
                200
              </span>
            </div>
          </div>
        </div>
      </li>
    </ol>
  </section>
</div>
`;

exports[`DOM snapshots SLDSSlider Vertical 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-form-element"
  >
    <label
      className="slds-form-element__label"
      htmlFor="vertical-id"
    >
      <span
        className="slds-slider-label"
      >
        <span
          className="slds-slider-label__label"
        >
          Slider Label
        </span>
        <span
          className="slds-slider-label__range"
        >
          0
           - 
          100
        </span>
      </span>
    </label>
    <div
      className="slds-form-element__control"
    >
      <div
        className="slds-slider slds-slider_vertical"
      >
        <input
          className="slds-slider__range"
          id="vertical-id"
          max={100}
          min={0}
          onChange={[Function]}
          onInput={[Function]}
          step={1}
          type="range"
        />
        <span
          aria-hidden="true"
          className="slds-slider__value"
        >
          0
        </span>
      </div>
    </div>
  </div>
</div>
`;
